{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 81,
  "lineage": "e0252d3c-2e5f-6725-8226-34050a051cc4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013e6c703e326d459",
            "association_id": "eipassoc-00fd04da2c6d3d866",
            "domain": "vpc",
            "id": "eipalloc-013e6c703e326d459",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e11b3ceb02519455",
            "private_dns": "ip-192-168-1-135.ap-south-1.compute.internal",
            "private_ip": "192.168.1.135",
            "public_dns": "ec2-52-66-107-7.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.107.7",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:432621609875:internet-gateway/igw-0d778236ad3717ddc",
            "id": "igw-0d778236ad3717ddc",
            "owner_id": "432621609875",
            "vpc_id": "vpc-0ce32832a570cbbc9"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013e6c703e326d459",
            "connectivity_type": "public",
            "id": "nat-060c1142e20190abe",
            "subnet_id": "subnet-0f9fa8b69b23a58b6"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "grt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:432621609875:route-table/rtb-04f7092052bb8c9a3",
            "id": "rtb-04f7092052bb8c9a3",
            "owner_id": "432621609875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d778236ad3717ddc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce32832a570cbbc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da541b808a314559",
            "route_table_id": "rtb-04f7092052bb8c9a3",
            "subnet_id": "subnet-0f9fa8b69b23a58b6"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.grt",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ecb91833e35a5d4",
            "route_table_id": "rtb-04f7092052bb8c9a3",
            "subnet_id": "subnet-0f4836c018efc9b4e"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.grt",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:432621609875:subnet/subnet-0a8619db98c014329",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8619db98c014329",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "private_subnet",
              "owner": "Akash"
            },
            "vpc_id": "vpc-0ce32832a570cbbc9"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:432621609875:subnet/subnet-02140b4ccaaab6f07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02140b4ccaaab6f07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "private_subnet",
              "owner": "Akash"
            },
            "vpc_id": "vpc-0ce32832a570cbbc9"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:432621609875:subnet/subnet-0f9fa8b69b23a58b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9fa8b69b23a58b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "public_subnet",
              "owner": "Akash"
            },
            "vpc_id": "vpc-0ce32832a570cbbc9"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:432621609875:subnet/subnet-0f4836c018efc9b4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4836c018efc9b4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "public_subnet",
              "owner": "Akash"
            },
            "vpc_id": "vpc-0ce32832a570cbbc9"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:432621609875:vpc/vpc-0ce32832a570cbbc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08c65eb82247716d5",
            "default_route_table_id": "rtb-0ba5c250d0059d7ce",
            "default_security_group_id": "sg-028665ec7c4d7aef6",
            "dhcp_options_id": "dopt-0db007c7da6f62c49",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce32832a570cbbc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba5c250d0059d7ce",
            "owner_id": "432621609875",
            "tags": {
              "Name": "My-Vpc",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "My-Vpc",
              "owner": "Akash"
            }
          }
        }
      ]
    }
  ]
}